--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jliocsar/notiz",
-  "version": "0.0.1",
-  "module": "index.civet",
+  "version": "0.0.2",
+  "main": "notiz.ts",
   "type": "module",
   "bin": {
     "notiz": "./notiz.ts"
