update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jliocsar/notiz",
+  "name": "@jliocsar/notiz-cli",
   "version": "0.0.1",
   "main": "notiz.ts",
   "type": "module",
