--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jliocsar/notiz-cli",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "notiz.ts",
   "type": "module",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "bun run --bun index.civet",
-    "transpile": "civet -c *.civet lib/db/*.civet",
+    "transpile": "civet -c *.civet lib/db/*.civet && sed -i 's/.civet/.civet.tsx/g' *.tsx lib/db/*.tsx",
     "db:studio": "drizzle-kit studio --port 3333",
     "db:generate": "drizzle-kit generate:sqlite",
     "db:transpile": "civet < lib/db/schema.civet > lib/db/schema.ts",
@@ -30,7 +30,7 @@
     "@topcli/spinner": "latest",
     "cli-table3": "latest",
     "colorette": "latest",
-    "cryptify": "^4.1.2",
+    "cryptify": "latest",
     "dayjs": "latest",
     "drizzle-orm": "latest",
     "yargs": "latest"
