handle input with inquirer

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@danielx/civet": "latest",
+    "@inquirer/prompts": "latest",
     "@libsql/client": "latest",
     "cli-markdown": "latest",
     "colorette": "latest",
