rewrite it with mongo

--- a/package.json
+++ b/package.json
@@ -10,17 +10,11 @@
   "scripts": {
     "start": "bun run --bun index.civet",
     "transpile": "civet -c *.civet lib/*.civet lib/db/*.civet && sed -i 's/.civet/.civet.tsx/g' *.tsx lib/*.tsx lib/db/*.tsx",
-    "db:studio": "drizzle-kit studio --port 3333",
-    "db:generate": "drizzle-kit generate:sqlite",
-    "db:transpile": "civet < lib/db/schema.civet > lib/db/schema.ts",
-    "db:migrate": "bun db:transpile && bun run --bun lib/db/migrate.civet",
-    "db:seed": "bun run --bun db/seed.civet",
-    "postinstall": "bun transpile && bun db:transpile"
+    "postinstall": "bun transpile"
   },
   "devDependencies": {
     "@types/yargs": "latest",
-    "bun-types": "latest",
-    "drizzle-kit": "latest"
+    "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "latest"
@@ -33,7 +27,8 @@
     "colorette": "latest",
     "cryptify": "latest",
     "dayjs": "latest",
-    "drizzle-orm": "latest",
+    "mongodb": "latest",
+    "on-exit-leak-free": "latest",
     "yargs": "latest"
   }
 }
